  * Move the package to Git.
  * debian/control: Use Architecture: any. Try to build on all available
    architectures again.
  * Drop fix-cmake-build-type-none.patch. Merged upstream.
  * Drop wxWidgets-assertions.patch. Merged upstream.
  * Drop clean file. Let the build system handle that.
  * Update debian/copyright for new release.

 -- Markus Koschany <apo@gambaru.de>  Sat, 31 Jan 2015 17:51:32 +0100

megaglest (3.9.1-3) unstable; urgency=medium

  * debian/control: Soften the dependency on megaglest-data to
    (>= ${source:Version}).

 -- Markus Koschany <apo@gambaru.de>  Sun, 07 Dec 2014 08:50:44 +0100

megaglest (3.9.1-2) unstable; urgency=medium

  * Add wxWidgets-assertions.patch.
    Fix megaglest_editor and megaglest_g3dviewer assertions with newer versions
    of wxWidgets that made the tools unusable. (Closes: #768572)
    Cherry-picked from upstream master branch. Commits c21317a5f, ad0b65272,
    6faa3dc72. Thanks to Mark Vejvoda for the patch.
  * debian/rules: Export DEB_CPPFLAGS_MAINT_APPEND = -DNDEBUG and disable
    wxWidgets assertions.

 -- Markus Koschany <apo@gambaru.de>  Mon, 01 Dec 2014 19:19:07 +0100

megaglest (3.9.1-1) unstable; urgency=low

  [ Mark Vejvoda ]
  * New upstream release. (Closes: #752338)
    - Fixed error handling conditions (Closes: #716693)
    - Includes experimental big-endian support
  * Fix dependency defects (Closes: #662429, #723790)

  [ Paul Wise ]
  * Bump Standards-Version, no changes needed.

  [ Markus Koschany ]
  * Add myself to Uploaders.
  * Remove Giuseppe and rainct from Uploaders at their own request.
  * Update debian/copyright for new release.
  * debian/control: Add arm64 and ppc64el to Architecture field. Remove
    non-existent arm architecture.
  * Export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed to avoid useless
    dependencies.
  * Drop megaglest_allow-build-with-newer-miniupnpc.patch. Fixed upstream.
  * Drop megaglest.TODO.